2009-09-04  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt and Adele Peterson.

        (Based on a patch from Adele).
        
        Fix <rdar://problem/7185875>.
        
        * page/Frame.cpp:
        (WebCore::Frame::setView):
        Detach any custom scroll bars from the old view.
        
        * page/FrameView.cpp:
        (WebCore::FrameView::detachCustomScrollbars):
        Simplify the check (and make it work when body is null) by just checking that the scroll bar owner is
        not a RenderPart object.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::destroy):
        ASSERT that frame() is not null here and also add a null check so that release builds won't crash.

2009-09-04  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Adam Roben.

        Make m_userStyleSheetLoader in Frame an OwnPtr.

        * page/Frame.cpp:
        (WebCore::Frame::Frame):
        (WebCore::Frame::~Frame):
        * page/Frame.h:
        * page/mac/FrameMac.mm:
        (WebCore::Frame::setUserStyleSheetLocation):
        (WebCore::Frame::setUserStyleSheet):

2009-09-04  Timothy Hatcher  <timothy@apple.com>

        Show color swatches in the Web Inspector before the color text so clicking them will not
        shift the swatch. Also makes multiple swatches in the single property toggle the color format.

        https://bugs.webkit.org/show_bug.cgi?id=28978

        Reviewed by Darin Adler.

        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.updateTitle): Some refactoring to consolidate
        the processing we do on the property value. This eliminated the old nickname code, since the new
        WebInspector.Color class handles this. We could also simplify the color regex since more
        is handled by the Color class. Also no longer uses innerHTML for the linkify code.